Cambios en el archivo index.html

--- a/index.html
+++ b/index.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <nav class="nav">
-            <ul class="nav__links">
-                <img src="images/logo.jpg" alt="" class="nav__logo">
-                <li>
-                    <a href="index.html" class="">
-                        <i class='bx bxs-home-alt-2'></i>
-                        Inicio
-                    </a>
-                </li>
-                <li>
-                    <a href="login.html">
-                        <i class='bx bxs-group'></i>
-                        Sobre nosotros
-                    </a>
-                </li>
-                <li>
-                    <a href="ajax.php">
-                        <i class='bx bxs-package'></i>
-                        Productos
-                    </a>
-                </li>
-                <li>
-                    <a href="vue.php">
-                        <i class='bx bx-user-pin'></i>
-                        Contactanos
-                    </a>
-                </li>
-            </ul>
-            <div class="nav__user">
-                <a href="" class="link__cart">
-                    <i class='bx bxs-cart-alt'></i>
-                    <span>10</span>
-                </a>
-                <a href="" class="link__login">Inicia sesión</a>
-            </div>
-        </nav>
+      <nav class="nav">
+        <ul class="nav__links">
+          <img src="images/logo.jpg" alt="" class="nav__logo" />
+          <li>
+            <a href="index.html" class="active">
+              <i class="bx bxs-home-alt-2"></i>
+              Inicio
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="bx bxs-group"></i>
+              Sobre nosotros
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="bx bxs-package"></i>
+              Productos
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="bx bx-user-pin"></i>
+              Contactanos
+            </a>
+          </li>
+        </ul>
+        <div class="nav__user">
+          <a href="" class="link__cart">
+            <i class="bx bxs-cart-alt"></i>
+            <span>10</span>
+          </a>
+          <a href="pages/login.html" class="link__login">Inicia sesión</a>
+        </div>
+      </nav>
     </header>
-    
-</body>
+  </body>
 </html>
