Se modifico la Section de Categorias, Populares y se agrego el carousel de imagenes

--- a/index.html
+++ b/index.html
@@ -52,21 +52,39 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="main">
       <div class="contenedor-general">
+        <section class="contenedor-populares">
+          <button id="prevBtn">
+            <i class="bx bxs-left-arrow"></i>
+          </button>
+          <div class="carousel-container">
+            <div class="carousel-slide active">
+              <img src="images/carousel/image1.webp" alt="Imagen 1" />
+            </div>
+            <div class="carousel-slide">
+              <img src="images/carousel/image2.webp" alt="Imagen 2" />
+            </div>
+            <div class="carousel-slide">
+              <img src="images/carousel/image3.webp" alt="Imagen 3" />
+            </div>
+          </div>
+          <button id="nextBtn">
+            <i class="bx bxs-right-arrow"></i>
+          </button>
+        </section>
         <section class="contenedor-categorias">
           <a href="" class="categorias__hombre"><p>Hombres</p></a>
           <a href="" class="categorias__mujer"><p>Mujeres</p></a>
           <a href="" class="categorias__niños"><p>Niños</p></a>
           <a href="" class="categorias__acesorios"><p>Accesorios</p></a>
         </section>
-
         <section class="contenedor-ofertas">
-          <h2>Ofertas del día</h2>
+          <h2>Mejores ofertas</h2>
           <div class="ofertas__cards">
             <div class="card__oferta">
               <div class="card__header">
-                <img src="images/camisas/camisa1.jpg" alt="" srcset="" />
+                <img src="images/camisas/camisa1.webp" alt="" srcset="" />
               </div>
               <div class="card__body">
                 <h3 class="card__body-title">Camisa deportiva</h3>
@@ -77,17 +95,27 @@
                   <span class="card__body-price-regular">$50.00</span>
                   <span class="card__body-price-offer">$40.00</span>
                 </p>
+                <div class="card__body-stars">
+                  <div class="starts">
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star"></i>
+                  </div>
+                  <p>4.0</p>
+                </div>
               </div>
               <div class="card__footer">
                 <button class="button__card cart">
-                  <i class="bx bxs-cart-add"></i>
+                  <i class="bx bx-cart-alt"></i>
                 </button>
                 <a href="" class="button__card">Detalles</a>
               </div>
             </div>
             <div class="card__oferta">
               <div class="card__header">
-                <img src="images/camisas/camisa2.jpg" alt="" srcset="" />
+                <img src="images/camisas/camisa2.webp" alt="" srcset="" />
               </div>
               <div class="card__body">
                 <h3 class="card__body-title">Camisa deportiva</h3>
@@ -98,17 +126,27 @@
                   <span class="card__body-price-regular">$50.00</span>
                   <span class="card__body-price-offer">$40.00</span>
                 </p>
+                <div class="card__body-stars">
+                  <div class="starts">
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                  </div>
+                  <p>5.0</p>
+                </div>
               </div>
               <div class="card__footer">
                 <button class="button__card cart">
-                  <i class="bx bxs-cart-add"></i>
+                  <i class="bx bx-cart-alt"></i>
                 </button>
                 <a href="" class="button__card">Detalles</a>
               </div>
             </div>
             <div class="card__oferta">
               <div class="card__header">
-                <img src="images/camisas/camisa3.jpg" alt="" srcset="" />
+                <img src="images/camisas/camisa3.webp" alt="" srcset="" />
               </div>
               <div class="card__body">
                 <h3 class="card__body-title">Camisa deportiva</h3>
@@ -119,17 +157,27 @@
                   <span class="card__body-price-regular">$50.00</span>
                   <span class="card__body-price-offer">$40.00</span>
                 </p>
+                <div class="card__body-stars">
+                  <div class="starts">
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star"></i>
+                  </div>
+                  <p>4.0</p>
+                </div>
               </div>
               <div class="card__footer">
                 <button class="button__card cart">
-                  <i class="bx bxs-cart-add"></i>
+                  <i class="bx bx-cart-alt"></i>
                 </button>
                 <a href="" class="button__card">Detalles</a>
               </div>
             </div>
             <div class="card__oferta">
               <div class="card__header">
-                <img src="images/camisas/camisa4.jpg" alt="" srcset="" />
+                <img src="images/camisas/camisa4.webp" alt="" srcset="" />
               </div>
               <div class="card__body">
                 <h3 class="card__body-title">Camisa deportiva</h3>
@@ -140,10 +188,20 @@
                   <span class="card__body-price-regular">$50.00</span>
                   <span class="card__body-price-offer">$40.00</span>
                 </p>
+                <div class="card__body-stars">
+                  <div class="starts">
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star light"></i>
+                    <i class="bx bxs-star"></i>
+                  </div>
+                  <p>4.5</p>
+                </div>
               </div>
               <div class="card__footer">
                 <button class="button__card cart">
-                  <i class="bx bxs-cart-add"></i>
+                  <i class="bx bx-cart-alt"></i>
                 </button>
                 <a href="" class="button__card">Detalles</a>
               </div>
@@ -154,5 +212,6 @@
     </main>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/carousel.js"></script>
   </body>
 </html>
